Update email text and prediction results

--- a/Phishing Classification.ipynb
+++ b/Phishing Classification.ipynb
@@ -1981,7 +1981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -1991,22 +1991,21 @@
       "Email Text: \n",
       "Dear Dika,\n",
       "\n",
-      "Akun Anda telah terdeteksi adanya aktivitas yang mencurigakan. Untuk melindungi akun Anda, kami meminta Anda untuk segera memverifikasi informasi akun Anda.\n",
+      "Kami ingin memberitahukan bahwa informasi akun Anda tetap aman dan terjaga. Sebagai bagian dari komitmen kami untuk melindungi privasi Anda, kami terus meningkatkan sistem keamanan kami.\n",
       "\n",
-      "Klik link berikut untuk memverifikasi akun Anda: \n",
-      "http://fake-bank.com/verify-account\n",
+      "Anda tidak perlu melakukan tindakan apapun. Jika ada pertanyaan mengenai akun Anda, silakan hubungi tim dukungan kami melalui situs resmi kami: \n",
+      "https://www.bank-anda.com\n",
       "\n",
-      "Jika Anda tidak melakukan verifikasi dalam waktu 24 jam, akun Anda akan diblokir.\n",
+      "Terima kasih telah menjadi bagian dari kami.\n",
       "\n",
       "Salam,\n",
-      "Tim Keamanan TolongLindungi\n",
+      "Tim Layanan Pelanggan BRI\n",
       "\n",
       "\n",
-      "\n",
-      "SVM Prediction: Phishing Email\n",
+      "SVM Prediction: Safe Email\n",
       "Decision Tree Prediction: Phishing Email\n",
       "Naive Bayes Prediction: Safe Email\n",
-      "Neural Network Prediction: Phishing Email\n"
+      "Neural Network Prediction: Safe Email\n"
      ]
     }
    ],
@@ -2023,16 +2022,15 @@
     "email_text = \"\"\"\n",
     "Dear Dika,\n",
     "\n",
-    "Akun Anda telah terdeteksi adanya aktivitas yang mencurigakan. Untuk melindungi akun Anda, kami meminta Anda untuk segera memverifikasi informasi akun Anda.\n",
+    "Kami ingin memberitahukan bahwa informasi akun Anda tetap aman dan terjaga. Sebagai bagian dari komitmen kami untuk melindungi privasi Anda, kami terus meningkatkan sistem keamanan kami.\n",
     "\n",
-    "Klik link berikut untuk memverifikasi akun Anda: \n",
-    "http://fake-bank.com/verify-account\n",
+    "Anda tidak perlu melakukan tindakan apapun. Jika ada pertanyaan mengenai akun Anda, silakan hubungi tim dukungan kami melalui situs resmi kami: \n",
+    "https://www.bank-anda.com\n",
     "\n",
-    "Jika Anda tidak melakukan verifikasi dalam waktu 24 jam, akun Anda akan diblokir.\n",
+    "Terima kasih telah menjadi bagian dari kami.\n",
     "\n",
     "Salam,\n",
-    "Tim Keamanan TolongLindungi\n",
-    "\n",
+    "Tim Layanan Pelanggan BRI\n",
     "\n",
     "\"\"\"\n",
     "svm_prediction = predict_email(email_text, svm)\n",
