Update email text and prediction results

--- a/Phishing Classification.ipynb
+++ b/Phishing Classification.ipynb
@@ -1945,6 +1945,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Mencetak Hasil Komparasi ke File CSV"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 62,
    "metadata": {},
@@ -2020,17 +2027,7 @@
     "    return prediction[0]\n",
     "\n",
     "email_text = \"\"\"\n",
-    "Dear Dika,\n",
-    "\n",
-    "Kami ingin memberitahukan bahwa informasi akun Anda tetap aman dan terjaga. Sebagai bagian dari komitmen kami untuk melindungi privasi Anda, kami terus meningkatkan sistem keamanan kami.\n",
-    "\n",
-    "Anda tidak perlu melakukan tindakan apapun. Jika ada pertanyaan mengenai akun Anda, silakan hubungi tim dukungan kami melalui situs resmi kami: \n",
-    "https://www.bank-anda.com\n",
-    "\n",
-    "Terima kasih telah menjadi bagian dari kami.\n",
-    "\n",
-    "Salam,\n",
-    "Tim Layanan Pelanggan BRI\n",
+    "Dear customer, your account has been flagged for suspicious activity. Please verify your credentials immediately. Thank you.\n",
     "\n",
     "\"\"\"\n",
     "svm_prediction = predict_email(email_text, svm)\n",
