Update classification reports for different models

--- a/results/dataset phising/Phishing Classification.ipynb
+++ b/results/dataset phising/Phishing Classification.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,25 +442,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Email Text    1\n",
-       "Email Type    0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jumlah nilai null adalah: 0 data\n"
+     ]
     }
    ],
    "source": [
     "# Mengecek nilai null pada dataset\n",
-    "df.isna().sum()"
+    "print(f\"Jumlah nilai null adalah: {df.isna().sum().sum()} data\")"
    ]
   },
   {
@@ -475,25 +470,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Email Text    0\n",
-       "Email Type    0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jumlah nilai null adalah: 0 data\n"
+     ]
     }
    ],
    "source": [
     "# Melakukan cross check data null pada dataset\n",
-    "df.isna().sum()"
+    "print(f\"Jumlah nilai null adalah: {df.isna().sum().sum()} data\")"
    ]
   },
   {
